# tastytrade-sdk-python

./: .env.sample  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  Makefile  Pipfile  README.md  mkdocs.yml  pyproject.toml  release  release.sh  set_alpha_version_tag.py  set_dependencies.py  set_dev_version_tag.py  tag_version.py  v1
.github/workflows/: ci.yml  dev-build.yml  dev-ci.yml  dev.yml  docs.yml  release-test.yml  release.yml  workflow.yml
.run/: checkstyle.run.xml  docs.run.xml  watch_docs.run.xml
docs/: Makefile  conf.py  index.md  index.rst  instruments.rst  market-metrics.rst  mkdocs.yml
docs/_build/: .buildinfo  genindex.html  getting-started.html  index.html  instruments.html  nav.html  objects.inv  py-modindex.html  search.html  searchindex.js  tastytrade.html
docs/_build/.doctrees/: environment.pickle  getting-started.doctree  index.doctree  instruments.doctree  nav.doctree  tastytrade.doctree
docs/_build/_sources/: getting-started.rst.txt  nav.rst.txt  tastytrade.rst.txt
docs/api/: instruments.rst  tastytrade.rst  watchlists.rst
docs/api-reference/: instruments.md  tastytrade.md
docs/contributers/: README.md
docs/contributors/: README.md
docs/maintainers/: README.md
docs/markdown/: api.md  authentication.md  index.md  instruments.md  market_data.md  market_metrics.md  tastytrade.md  watchlists.md
docs/users/: README.md  module.html.jinja2
scripts/: build.py  release.py
src/tastytrade_sdk/: __init__.py  account.py  api.py  authentication.py  config.py  exceptions.py  instruments.py  market_metrics.py  orders.py  tastytrade.py  watchlists.py  websocket.py
src/tastytrade_sdk/accounts/: account_streamer.py  accounts.py  models.py
src/tastytrade_sdk/instruments/: __init__.py  instruments.py  models.py
src/tastytrade_sdk/market_data/: market_data.py  models.py  streamer_symbol_translation.py  subscription.py
src/tastytrade_sdk/market_metrics/: __init__.py  market_metrics.py  models.py
src/tastytrade_sdk/orders/: models.py  orders.py
src/tastytrade_sdk/watchlists/: __init__.py  watchlists.py
tastytrade_sdk/: __init__.py  api.py  instruments.py  market_metrics.py  watchlists.py
tests/: account_streaming_experiment.py  experiment.py  market_data_experiment.py  place_order_and_wait_experiment.py  test_authentication.py  utils.py
tests/market_data/: test_streamer_symbol_translations.py  test_subscription.py
