[tool.poetry]
name = "tastytrade-sdk"
version = "1.0.1a0"
description = "A python wrapper around the tastytrade open API"
authors = [
    "Aaron Mamparo <aaronmamparo@gmail.com>"
]
license = "MIT"
readme = "docs/users/README.md"
packages = [
    { include = "tastytrade_sdk", from = "src" }
]

[project.urls]
documentation = "https://tastytrade.github.io/tastytrade-sdk-python"
repository = "https://github.com/tastytrade/tastytrade-sdk-python"

[tool.poetry.dependencies]
python = "^3.8"
injector = "^0.20.1"
websockets = "^11.0.3"
bidict = "^0.22.1"
strenum = "^0.4.15"
ujson = "^5.8.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pylint = "^2.17.4"
pylint-quotes = "^0.2.3"
pdoc = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
